# better-python-lists

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: test_and_lint.yml
better_python_lists/: list.py
tests/: test_compact.py  test_flatten.py
