[tool.poetry]
name = "better-python-lists"
version = "0.1.0"
description = "Adds some useful methods on top of Python lists"
authors = ["Bradley Marques <bradleyrcmarques@gmail.com>"]
license = "GNU GENERAL PUBLIC LICENSE v3"
readme = "README.md"
packages = [{include = "better_python_lists"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
